# windows-pc-manager

./: .gitignore  KNOWN_ISSUES.md  README.md  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
