[package]
name = "pc-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pc_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
dirs = "6.0.0"
zip = "8.6.0"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6.12"
warp = { version = "0.3", features = ["websocket"] }
enigo = "0.6.1"
futures-util = "0.3"
screenshots = "0.8"
winapi = { version = "0.3", features = ["winuser", "windef"] }
winreg = "0.52"
